@@ -2,6 +2,7 @@ ub_val_ctx_create
 ub_val_ctx_delete
 ub_val_ctx_config
 ub_val_ctx_add_ta
+ub_val_ctx_add_ta_file
 ub_val_ctx_trustedkeys
 ub_val_ctx_async
 ub_val_ctx_poll
